force-app/main/default/objects/leaseworks__Address_Stage__c/leaseworks__Address_Stage__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_2012 Address Book Staging</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_2012 Address Book Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>