force-app/main/default/objects/leaseworks__Address_Stage__c/fields/leaseworks__Cell_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cell_Number__c</fullName>
    <label>Cell Number</label>
    <type>Phone</type>
</CustomField>