force-app/main/default/objects/leaseworks__Address_Stage__c/fields/leaseworks__Gender_Title__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Gender_Title__c</fullName>
    <label>Gender Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>