force-app/main/default/objects/leaseworks__Address_Stage__c/fields/leaseworks__Lookup_Lessor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lookup_Lessor__c</fullName>
    <inlineHelpText>Lessor this contact is associated with.</inlineHelpText>
    <label>Lessor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>