force-app/main/default/objects/leaseworks__Address_Stage__c/fields/leaseworks__Lookup_Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lookup_Operator__c</fullName>
    <description>Airline this contact is associated with.</description>
    <inlineHelpText>Airline this contact is associated with.</inlineHelpText>
    <label>Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>