force-app/main/default/objects/leaseworks__Address_Stage__c/fields/leaseworks__Street__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Street__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>