force-app/main/default/objects/leaseworks__Address_Stage__c/fields/leaseworks__Title__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Title__c</fullName>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>